--- a/index.html
+++ b/index.html
@@ -38,24 +38,89 @@
     <link href="https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,400;0,500;0,600;0,800;1,900&display=swap" rel="stylesheet">
 
     <!-- Schema.org -->
-    <script type="application/ld+json">
+   <script type="application/ld+json">
+{
+  "@context": "https://schema.org",
+  "@graph": [
     {
-      "@context": "https://schema.org",
-      "@type": "WebPage",
-      "name": "Minidu Shashimal - About this page",
-      "description": "This page provides information about Minidu Shashimal, a professional graphic designer and web developer. Explore the services, blog, and portfolio of Minidu Shashimal on minidushashimal.com.",
+      "@type": "WebSite",
+      "@id": "https://minidushashimal.com/#website",
       "url": "https://minidushashimal.com",
-      "mainEntityOfPage": {
-        "@type": "WebPage",
-        "@id": "https://minidushashimal.com"
-      },
-      "publisher": {
-        "@type": "Organization",
-        "name": "Minidu Shashimal",
-        "url": "https://minidushashimal.com"
+      "name": "Minidu Shashimal - Graphic Designer & Front-End Developer",
+      "description": "Portfolio of Minidu Shashimal, a professional front-end developer and graphic designer specializing in Facebook ads, YouTube thumbnails, and web development.",
+      "potentialAction": {
+        "@type": "SearchAction",
+        "target": "https://minidushashimal.com/search?q={search_term_string}",
+        "query-input": "required name=search_term_string"
       }
+    },
+    {
+      "@type": "WebPage",
+      "@id": "https://minidushashimal.com/#webpage",
+      "url": "https://minidushashimal.com",
+      "name": "Minidu Shashimal's Portfolio",
+      "isPartOf": {
+        "@id": "https://minidushashimal.com/#website"
+      },
+      "about": {
+        "@id": "https://minidushashimal.com/#person"
+      },
+      "description": "Explore Minidu Shashimal's portfolio featuring graphic design projects, web development skills, and more.",
+      "breadcrumb": {
+        "@id": "https://minidushashimal.com/#breadcrumb"
+      }
+    },
+    {
+      "@type": "Person",
+      "@id": "https://minidushashimal.com/#person",
+      "name": "Minidu Shashimal",
+      "image": "https://minidushashimal.com/meta.png",
+      "url": "https://minidushashimal.com",
+      "jobTitle": "Graphic Designer & Front-End Developer",
+      "worksFor": {
+        "@type": "Organization",
+        "name": "Minidu Shashimal Aluthge"
+      },
+      "sameAs": [
+        "https://github.com/miniduonline",
+        "https://www.facebook.com/miniduonline",
+        "https://www.linkedin.com/in/miniduonline"
+      ]
+    },
+    {
+      "@type": "Organization",
+      "@id": "https://minidushashimal.com/#organization",
+      "name": "Minidu Shashimal Aluthge",
+      "url": "https://minidushashimal.com",
+      "logo": "https://minidushashimal.com/meta.png",
+      "sameAs": [
+        "https://www.facebook.com/miniduonline",
+        "https://www.linkedin.com/in/miniduonline",
+        "https://github.com/miniduonline"
+      ]
+    },
+    {
+      "@type": "BreadcrumbList",
+      "@id": "https://minidushashimal.com/#breadcrumb",
+      "itemListElement": [
+        {
+          "@type": "ListItem",
+          "position": 1,
+          "name": "Home",
+          "item": "https://minidushashimal.com"
+        },
+        {
+          "@type": "ListItem",
+          "position": 2,
+          "name": "Portfolio",
+          "item": "https://minidushashimal.com/portfolio"
+        }
+      ]
     }
-    </script>
+  ]
+}
+</script>
+
 
     <!-- Google tag (gtag.js) -->
   
