--- a/index.html
+++ b/index.html
@@ -119,6 +119,29 @@
     }
   ]
 }
+
+     {
+  "@context": "https://schema.org",
+  "@type": "FAQPage",
+  "mainEntity": [
+    {
+      "@type": "Question",
+      "name": "Who is Minidu Shashimal?",
+      "acceptedAnswer": {
+        "@type": "Answer",
+        "text": "Minidu Shashimal is a front-end developer and graphic designer offering services like web development and graphic designing."
+      }
+    },
+    {
+      "@type": "Question",
+      "name": "What services does Minidu offer?",
+      "acceptedAnswer": {
+        "@type": "Answer",
+        "text": "Minidu specializes in front-end development, web design, and graphic design, including YouTube thumbnails, logos, banners, and more."
+      }
+    }
+  ]
+}
 </script>
 
 
