--- a/index.html
+++ b/index.html
@@ -147,7 +147,9 @@
 
     <!-- Google tag (gtag.js) -->
   
-     <script>
+     <!-- Google tag (gtag.js) -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-W6XRJT39ZH"></script>
+<script>
   window.dataLayer = window.dataLayer || [];
   function gtag(){dataLayer.push(arguments);}
   gtag('js', new Date());
