--- a/index.html
+++ b/index.html
@@ -187,7 +187,7 @@
 
     <section id="about" class="about">
       <div class="about-container">
-        <img src="profile.png" alt="" />
+        <img src="profile.png" alt="" loader="eager" />
         <div class="info-box">
           <div class="text">
             <h3>Hello I'm</h3>
