--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
     <meta name="twitter:title" content="Minidu Shashimal - Front-End Developer & UI/UX Designer">
     <meta name="twitter:description" content="Discover cutting-edge front-end development and innovative UI/UX design by Minidu Shashimal. Creating modern and responsive websites with unique web graphics.">
     <meta name="twitter:image" content="https://minidushashimal.com/meta.png"> <!-- Replace with a 1200x630px image -->
-
+   <meta name="google-adsense-account" content="ca-pub-6338685630990891">
     <!-- Canonical Tag -->
     <link rel="canonical" href="https://minidushashimal.com" />
 
@@ -37,6 +37,9 @@
     />
     <link href="https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,400;0,500;0,600;0,800;1,900&display=swap" rel="stylesheet">
 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-6338685630990891"
+     crossorigin="anonymous"></script>
+    
     <!-- Schema.org -->
    <script type="application/ld+json">
 {
