--- a/index.html
+++ b/index.html
@@ -39,6 +39,10 @@
 
 <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-6338685630990891"
      crossorigin="anonymous"></script>
+
+    <script async custom-element="amp-auto-ads"
+        src="https://cdn.ampproject.org/v0/amp-auto-ads-0.1.js">
+</script>
     
     <!-- Schema.org -->
    <script type="application/ld+json">
@@ -162,7 +166,9 @@
   </head>
   <body>
 
-
+<amp-auto-ads type="adsense"
+        data-ad-client="ca-pub-6338685630990891">
+</amp-auto-ads>
 
     
     <header class="header">
